WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238511
AXIsolatedObject::isAccessibilityObject should not be ASSERT_NOT_REACHED
https://bugs.webkit.org/show_bug.cgi?id=238511
Summary
AXIsolatedObject::isAccessibilityObject should not be ASSERT_NOT_REACHED
Tyler Wilcock
Reported
2022-03-29 09:55:05 PDT
We try to downcast AXCoreObjects to AccessibilityObjects here in AXLogger's TextStream& operator<<(TextStream&, const AXCoreObject&): if (auto* axObject = dynamicDowncast<AccessibilityObject>(&object); axObject && axObject->hasDisplayContents()) stream.dumpProperty("hasDisplayContents", true);
Attachments
Patch
(2.70 KB, patch)
2022-03-29 09:59 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-03-29 09:55:16 PDT
<
rdar://problem/90988646
>
Tyler Wilcock
Comment 2
2022-03-29 09:59:23 PDT
Created
attachment 456036
[details]
Patch
EWS
Comment 3
2022-03-29 17:33:30 PDT
Committed
r292085
(
249012@main
): <
https://commits.webkit.org/249012@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456036
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug