AXIsolatedObject::isAccessibilityObject should not be ASSERT_NOT_REACHED https://bugs.webkit.org/show_bug.cgi?id=238511

Reviewed by Chris Fleizach.

We try to downcast AXCoreObjects to AccessibilityObjects here in AXLogger's TextStream& operator<<(TextStream&, const AXCoreObject&):

if (auto* axObject = dynamicDowncast<AccessibilityObject>(&object); axObject && axObject->hasDisplayContents())
    stream.dumpProperty("hasDisplayContents", true);

So this should not ASSERT_NOT_REACHED in AXIsolatedObject.

* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::isAccessibilityObject const): Deleted.
* accessibility/isolatedtree/AXIsolatedObject.h:



Canonical link: https://commits.webkit.org/249012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292085 268f45cc-cd09-0410-ab3c-d52691b4dbfc