Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h
@@ -485,8 +485,9 @@ private:
     bool press() override;
     bool performDefaultAction() override;
 
+    bool isAccessibilityObject() const override { return false; }
+
     // Functions that should never be called on an isolated tree object. ASSERT that these are not reached;
-    bool isAccessibilityObject() const override;
     bool isAccessibilityNodeObject() const override;
     bool isAccessibilityRenderObject() const override;
     bool isAccessibilityScrollbar() const override;
